# Assignment_3

./: .gitignore  README.md  architecture.py  docker-compose.yml
.github/workflows/: fastapi.yml  ge.yml
airflow/app/: docker-compose.yaml
airflow/app/dags/: goes_18_dag.py  nexrad_dag.py  sandbox.py
docker_streamlit/: Dockerfile  Home.py  api_logging_func.py  app_api_record.db  req.txt  user_details.db  users.db  users_api_record.db
docker_streamlit/docker_streamlit/: Dockerfile
docker_streamlit/docker_streamlit/pages/: Goes18.py  Mapping.py  Nexrad.py  signup.py
docker_streamlit/pages/: Dashboard.py  Edit_Details.py  Goes18.py  Mapping.py  Nexrad.py  signup.py
fastapi/: Dockerfile  app_api_record.db  base_model.py  basic_func.py  filenames_goes.db  main.py  requirements.txt  test_main.py  users.db  users_api_record.db
fastapi/fastapi/: basic_func.py  main.py  requirements.txt  test_main.py  users.db
ge/great_expectations/: great_expectations.yml
ge/great_expectations/data/: goes18_data.csv
ge/great_expectations/expectations/: .ge_store_backend_id  goes_suite.json  nexrad_suite.json
great_expectations_new/great_expectations/: great_expectations.yml
great_expectations_new/great_expectations/checkpoints/: goes_checkpoint_v1.yml  nexrad_checkpoint_v1.yml
great_expectations_new/great_expectations/data/: nexrad_data.csv
great_expectations_new/great_expectations/expectations/: goes_suite.json  (+2 more)
greatexpectations/great_expectations/: great_expectations.yml
packaging_tutorial/: pyproject.toml
packaging_tutorial/packaging_tutorial/: pyproject.toml
(+20 files in other folders)
