[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "team09_assignment3"
version = "0.0.1"
authors = [
  { name="Lakshman Raaj", email="senthilnathan.l@northeastern.edu" },
]
description = "A small package to fetch files from GOES18 and nexrad public S3 buckets"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"